# crewai_expert

./: .env.example  .gitignore  README.md  pyproject.toml  server.py
src/crewai_expert/: main.py
src/crewai_expert/agents/: __init__.py  crewai_expert.py  formatter.py  linguist.py
src/crewai_expert/clients/: __init__.py  github_client.py
src/crewai_expert/crews/: __init__.py
src/crewai_expert/crews/answer_crewai_prompt/: answer_crewai_prompt_crew.py
src/crewai_expert/crews/answer_crewai_prompt/config/: agents.yaml  tasks.yaml
src/crewai_expert/services/: __init__.py  doc_files_chunking_service.py
src/crewai_expert/types/: __init__.py  crewai_expert_state.py  doc_file.py  doc_file_chunk.py
src/crewai_expert/utils/: __init__.py  mdx_chunker.py
