[project]
name = "crewai_expert"
version = "0.1.0"
description = "crewai_expert using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.4.1",
    "openai>=1.109.1",
    "qdrant-client>=1.15.1",
    "semchunk>=3.2.3",
    "tiktoken>=0.11.0",
    "tqdm>=4.67.1",
]

[project.scripts]
kickoff = "crewai_expert.main:kickoff"
run_crew = "crewai_expert.main:kickoff"
plot = "crewai_expert.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
